Fixed a number of typos in Javadoc comments, resources, etc.

--- a/src/main/resources/bundles/Plugin_MantaMatcher.properties
+++ b/src/main/resources/bundles/Plugin_MantaMatcher.properties
@@ -3,6 +3,7 @@
 # ---------------------------------
 
 plugin.status=STATUS: Processing selected images for use with MantaMatcher algorithm
-plugin.warning.duplicate=Duplicate MantaMatcher image found: {0}; ignoring duplicate
-plugin.warning.fileNotFounde=MantaMatcher source image not found: {0}
+plugin.warning.duplicate=Duplicate MantaMatcher image found: {0}; ignoring
+plugin.warning.fileNotFound=MantaMatcher reference image not found: {0}
+plugin.warning.noReference=Unable to find associated reference image for: {0}; self-referencing
 plugin.warning.mmprocess.failed=Failed to find all three required files after mmprocess: {0}
