--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -274,7 +274,7 @@ country25 = Wallis and Futuna
 tissueType0 = Tissue sample
 tissueType1 = Fecal sample
 tissueType2 = Mucus sample
-tissueType3 = Blood sampe
+tissueType3 = Blood sample
 tissueType4 = Parasite sample
 
 #biological measurement types
