Fixed BatchUpload not accepting unspecified optional CSV files, and added Shepherd cleanup in JSP page.

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -7,6 +7,9 @@ encounter=encounter
 batchUpload.error.MakeDir=Unable to create data folder on server
 batchUpload.error.NoDataFileInd=No CSV data file for individuals specified
 batchUpload.error.NoDataFileEnc=No CSV data file for encounters specified
+batchUpload.error.NoDataFileMea=No CSV data file for measurements specified
+batchUpload.error.NoDataFileMed=No CSV data file for media specified
+batchUpload.error.NoDataFileSam=No CSV data file for samples specified
 batchUpload.error.DataFileUploadErrInd=An error occurred uploading the CSV data file for individuals
 batchUpload.error.DataFileUploadErrEnc=An error occurred uploading the CSV data file for encounters
 batchUpload.error.DataFileUploadErrMea=An error occurred uploading the CSV data file for measurements
