Added extra batch upload plugin information on JSP page.

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -120,6 +120,8 @@ gui.step2.enums.list13=<span class="dataType">Sample</span> <span class="colHead
 
 gui.step2.text2=CSV files can be output from most spreadsheet applications, but you should ensure date columns are formatted correctly. Also, if your text has any irregular characters (e.g. accented characters) be careful to make sure your spreadsheet outputs correctly in UTF-8 format.<ul><li>LibreOffice Calc supports UTF-8 CSV files.</li><li>OpenOffice Calc supports UTF-8 CSV files.</li><li>Google Spreadsheet supports UTF-8 CSV files <em>(File / Download as / Comma Separated Values)</em>.</li><li>Microsoft Excel does <strong>not</strong> support UTF-8 CSV files.</li></ul>
 
+gui.step2.pluginText=MantaMatcher also has a specialized algorithm to analyze the ventral spot patterns of mantas. It uses &quot;candidate region&quot; (CR) photos for this, which are carefully aligned & cropped versions of identification (ID) photos. These are also supported during batch upload in the <span class="dataType">Media</span> data file, and must have a filename exactly as the related ID photo, but with a &quot;_CR&quot; suffix. For example, for an ID photo specified as <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1.jpg</span>, the CR photo must be called <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1_CR.jpg</span>.
+
 gui.step3.title=Step 3
 
 gui.step3.text=Submit the data files to the server for processing:
