Updated commonConfiguration to enable batch upload module (with MantaMatcher plugin).

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -30,9 +30,9 @@ GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
 wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 
 # Whether to display and allow batch updates (true/false).
-allowBatchUpload = false
+allowBatchUpload = true
 # Batch data processing plugin to use.
-#batchUploadPlugin = org.ecocean.batch.Plugin_MantaMatcher
+batchUploadPlugin = org.ecocean.batch.Plugin_MantaMatcher
 # Progress/page refresh interval (seconds) during batch upload.
 batchUploadProgressRefresh = 5
 
