--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -192,7 +192,7 @@ maximumDepthInMeters = true
 showSize = true
 
 #project-related
-application.version=shepherd-3.3.0-RELEASE
+application.version=shepherd-3.4.0-EXPERIMENTAL
 
 
 #genetic parameters
