committing caribwhale changes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -24,7 +24,7 @@ dataDirectoryName = shepherd_data_dir
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 #This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
-GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
+GlobalUniqueIdentifierPrefix=CaribWhale:MultipleSpecies:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
 #wikiLocation=http://localhost:8080/wiki/doku.php?id=
@@ -40,19 +40,19 @@ mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
 #HTML metadata for each page
-htmlDescription=A text description of your mark-recapture project
-htmlKeywords=A bunch of keywords to help search engines categorize your web site
-htmlTitle=My Mark-Recapture Project for Species X
+htmlDescription=Our mission is to foster an environment that will protect cetaceans and their habitats by promoting responsible whale watching, supporting scientific research, conservation, education and advocacy. While our core membership includes whale watching operators anyone can join who wants to support grassroots ocean conservation.
+htmlKeywords=whales, mark-recapture
+htmlTitle=CARIBwhale
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
-htmlAuthor=My Research Group
+htmlAuthor=CARIBwhale
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
 urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
-footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
+footerGraphicAlt=Powered by Wildbook
 
 
 #Google Service keys for Search
@@ -61,7 +61,7 @@ googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LP
 
 
 #pattern recognition
-useSpotPatternRecognition=true
+useSpotPatternRecognition=false
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
@@ -72,8 +72,8 @@ C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
 citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
-institutionCode=myInstitution
-catalogCode=myCatalog
+institutionCode=CARIBwhale
+catalogCode=MultipleCatalogs
 
 #for single species libraries, fill out these fields
 kingdom=whichKingdom
@@ -102,7 +102,7 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = false
+showTaxonomy = true
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 #you can alow for more complex options and descriptors, such as:
@@ -136,11 +136,11 @@ samplingProtocol0=estimate
 samplingProtocol1=measure
 
 #show elevation/depth
-maximumElevationInMeters = true
+maximumElevationInMeters = false
 maximumDepthInMeters = true
 
 #show size for encounters
-showSize = true
+showSize = false
 
 #project-related variables
 application.version=${pom.version}
