Adding additional countries for Andrea

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -238,6 +238,20 @@ locationID11 = MexicoRevillagigedos
 locationID12 = Hawaii
 locationID13 = Maldives
 locationID14 = Peru
+locationID15 = Egypt
+locationID16 = Portugal (Azores)
+locationID17 = Galapagos
+locationID18 = Costa Rica
+locationID19 = Mexico (Yucatan)
+locationID20 = Yap
+locationID21 = India
+locationID22 = Saudi Arabia
+locationID23 = USA (east coast)
+locationID24 = Fiji
+locationID25 = French Polynesia
+locationID26 = Philippines
+locationID27 = Papua New Guinea
+locationID28 = Seychelles
 
 #whether to show country field as a location
 showCountry = false
@@ -268,7 +282,17 @@ country21 = Tuvalu
 country22 = United Kingdom
 country23 = United States of America
 country24 = Vanuatu
-country25 = Wallis and Futuna
+country25 = Egypt
+country26 = Portugal
+country27 = Ecuador
+country28 = Costa Rica
+country29 = Mexico
+country30 = Yap
+country31 = India
+country32 = Saudi Arabia
+country33 = Philippines
+country34 = Seychelles
+
 
 #tissue sample types
 tissueType0 = Tissue sample
@@ -323,6 +347,20 @@ role21 = Hawaii
 role22 = Maldives
 role23 = Peru
 role24 = NewZealand
+role25 = Egypt
+role26 = Portugal (Azores)
+role27 = Galapagos
+role28 = Costa Rica
+role29 = Mexico (Yucatan)
+role30 = Yap
+role31 = India
+role32 = Saudi Arabia
+role33 = USA (east coast)
+role34 = Fiji
+role35 = French Polynesia
+role36 = Philippines
+role37 = Papua New Guinea
+role38 = Seychelles
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
 #in your Shepherd Project instance.
@@ -351,6 +389,20 @@ roleDefinition21 = Hawaii permissions.
 roleDefinition22 = Maldives permissions.
 roleDefinition23 = Peru permissions.
 roleDefinition24 = New Zealand permissions.
+roleDefinition25 = Egypt
+roleDefinition26 = Portugal (Azores)
+roleDefinition27 = Galapagos
+roleDefinition28 = Costa Rica
+roleDefinition29 = Mexico (Yucatan)
+roleDefinition30 = Yap
+roleDefinition31 = India
+roleDefinition32 = Saudi Arabia
+roleDefinition33 = USA (east coast)
+roleDefinition34 = Fiji
+roleDefinition35 = French Polynesia
+roleDefinition36 = Philippines
+roleDefinition37 = Papua New Guinea
+roleDefinition38 = Seychelles
 
 
 #Sample preservation methods
