securing the EncounterSetSubmitterID URL

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -171,6 +171,8 @@
       			/DeleteAllDataPermanently = authc, roles[destroyer]
       			/encounters/searchExport = authc, roles[admin]
       			/welcome.jsp = authc
+      			
+      			/EncounterSetSubmitterID = authc, roles[researcher]
                
 
             </param-value>
