adding show User configurability Changing User popup from a rollover to a click

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -241,3 +241,5 @@ role1 = destroyer
 #in your Shepherd Project instance.
 roleDefinition0 = Administrator with full, unlimited access to all functions of the Shepherd Project EXCEPT full data deleting, which requires the 'destroyer' role.
 roleDefinition1 = Can execute the DeleteAllDataPermanently servlet, which PERMANENTLY destroys all data in the Shepherd Project. CAREFUL!
+
+showUsersToPublic = true
