More JQuery UI dialog migration

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -218,6 +218,7 @@ resetMetalTags=Reset Metal Tags
 resetAcousticTag=Reset Acoustic Tag
 resetSatelliteTag=Reset Satellite Tag
 releaseDate=Release Date
+setReleaseDate=Set Release Date
 releaseDateFormat=Use format dd/mm/yyyy
 setSexAnalysis = Add/update genetic sex determination
 geneticSex = Genetic sex
@@ -228,7 +229,7 @@ samplingProtocol = Sampling Protocol
 occurrenceID = Occurrence ID
 newOccurrenceID = New Occurrence ID
 country = Country
-resetCountry = Reset reported country
+resetCountry = Set reported country
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
