--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -230,6 +230,8 @@ occurrenceID = Occurrence ID
 newOccurrenceID = New Occurrence ID
 country = Country
 resetCountry = Set reported country
+assignOccurrence = Manage Occurrence Assignment
+occurrenceMessage = In this dialog box, you can add an encounter to a new or existing occurence or remove the encounter from an occurrence if already assigned.
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
