move metal tags to popup UI setters

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -214,9 +214,9 @@ msMarkers = Microsatellite Markers
 metalTags = Metal Tags
 satelliteTag = Satellite Tag
 acousticTag=Acoustic Tag
-resetMetalTags=Reset Metal Tags
-resetAcousticTag=Reset Acoustic Tag
-resetSatelliteTag=Reset Satellite Tag
+resetMetalTags=Manage Physical Tag Data
+resetAcousticTag=Set Acoustic Tag Metadata
+resetSatelliteTag=Set Satellite Tag Metadata
 releaseDate=Release Date
 setReleaseDate=Set Release Date
 releaseDateFormat=Use format dd/mm/yyyy
