migrate set others to inform to popup

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -81,7 +81,8 @@ setAlternateID = Set Alternate ID
 setVerbatimEventDate = Set Verbatim Event Date
 set = Set
 initCapsSet = Set
-setOthersToInform = <font color=\"#990000\">Set others to inform:</font></strong><br> Separate multiple email addresses with a comma.
+setOthersToInform = Set others to inform
+separateEmails = Separate email addresses with a comma.
 matchedBy = Matched by
 unmatchedFirstEncounter = Unmatched first encounter
 visualInspection = Visual inspection
