--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -237,6 +237,9 @@ manageIdentity = Manage Identity
 identityMessage = In this dialog box, you can add an encounter to a new or existing marked individual or remove the encounter from a marked individual if already assigned.
 or = OR
 setMeasurements = Set Physical Measurements
+dynamicProperties = Dynamic Properties
+addDynamicProperty = Add Dynamic Property
+setDPMessage = From this dialog, you can change the value of this dynamic property or delete it by leaving the value empty.
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
