--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -240,6 +240,7 @@ setMeasurements = Set Physical Measurements
 dynamicProperties = Dynamic Properties
 addDynamicProperty = Add Dynamic Property
 setDPMessage = From this dialog, you can change the value of this dynamic property or delete it by leaving the value empty.
+removeSpotData = Remove Spot Data
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
