The blue bar is gone! hooray!

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -22,7 +22,9 @@ description = An encounter is a sighting of a single animal at a specific locati
 unidentifiable_title = Unidentifiable Encounter Number
 unapproved_title = UNAPPROVED Encounter Number
 title = Encounter Number
-identified_as = Identified as
+identified_as = Identified as:
+workflowState = Workflow state:
+setWorkflowState = Set Workflow State
 matched_by = Matched by
 status = Status
 alternate_id = Alternate ID
