--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -38,9 +38,9 @@ view_map = View map
 size = Reported size
 unknown = Unknown
 method = Method
-depth = Water depth
-elevation = Elevation
-scarring = Noticeable scarring
+depth = Water depth:
+elevation = Elevation:
+scarring = Noticeable scarring:
 comments = Additional comments
 submitter = Submitter
 submitterOrganization = Organization
@@ -48,7 +48,7 @@ submitterProject = Project
 photographer = Photographer
 inform_others = Others to inform
 none = None
-sex = Sex
+sex = Sex:
 mapping = Mapping
 map_note = <i>Note</i>: If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
 nomap = No GPS data is available for mapping.
@@ -151,7 +151,7 @@ directlyMeasured = directly measured
 personalGuess = personal guess
 guessOfGuide = guess of guide/researcher
 vessel = Vessel
-behavior = Behavior
+behavior = Behavior:
 eventID = Event ID
 verbatimEventDate = Verbatim Event Date
 addDynamicProperty = Add dynamic property
@@ -164,7 +164,7 @@ filename = Filename
 taxonomy = Taxonomy
 resetTaxonomy = Reset genus and species
 resetLifeStage = Reset life stage
-lifeStage = Life stage
+lifeStage = Life stage:
 measurements = Measurements
 biomeasurements = Biological/Chemical Measurements
 measurement = measurement
@@ -243,6 +243,8 @@ dynamicProperties = Dynamic Properties
 addDynamicProperty = Add Dynamic Property
 setDPMessage = From this dialog, you can change the value of this dynamic property or delete it by leaving the value empty.
 removeSpotData = Remove Spot Data
+locationDescription = Description:
+tagging = Tagging
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
