more formatting changes

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -41,7 +41,7 @@ method = Method
 depth = Water depth:
 elevation = Elevation:
 scarring = Noticeable scarring:
-comments = Additional comments
+comments = Additional comments:
 submitter = Submitter
 submitterOrganization = Organization
 submitterProject = Project
