--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -245,6 +245,7 @@ setDPMessage = From this dialog, you can change the value of this dynamic proper
 removeSpotData = Remove Spot Data
 locationDescription = Description:
 tagging = Tagging
+contactInformation = Contact Information
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
