successful move of map and tapirlink

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -136,7 +136,7 @@ reaccept = Reaccept
 rejectEncounter = Reject Encounter
 resetThumbnail = Reset Thumbnail
 useImage = Use image
-currentValue = Current value is
+currentValue = Current value:
 change = Change
 editScarring = Edit scarring description
 resetScarring = Reset Scarring
