--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -249,6 +249,6 @@ contactInformation = Contact Information
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
-#jspImport0=myFile.jsp
+jspImport0=spotMatchingAlgorithm.jsp
 #jspImport1=myFile.jsp
 #jspImport2=myFile.jsp
