--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -246,6 +246,7 @@ removeSpotData = Remove Spot Data
 locationDescription = Description:
 tagging = Tagging
 contactInformation = Contact Information
+tracking = Tracking
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
