Adding header color configurability

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -171,6 +171,11 @@ encounterState0=unapproved
 encounterState1=approved
 encounterState2=unidentifiable
 
+#encounterState color display options, the precursors to future workflow
+encounterStateCSSClass0=unapproved_encounters
+encounterStateCSSClass1=approved_encounters
+encounterStateCSSClass2=unidentifiable_encounters
+
 #limit Encounter.locationID to these values
 #locationID0 = location0
 #locationID1 = location 1
