BatchUpload modifications to support adding encounters to existing individuals.

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -55,6 +55,7 @@ batchUpload.processError.mediaDownload=Unable to download media item from: {0}
 batchUpload.processError.mediaRename=Unable to store media item correctly: {0}
 batchUpload.processError.persistIndividual=Individual {0} could not be stored in the database; batch upload aborted.
 batchUpload.processError.persistEncounter=Encounter {0} could not be stored in the database; batch upload aborted.
+batchUpload.processError.assignEncounter=Encounter {0} could not be assigned to Individual {1}; batch upload aborted.
 
 # -------------------------------------
 # Resources for batch upload JSP pages.
@@ -155,7 +156,7 @@ gui.summary.label.mea=Number of measurements:
 gui.summary.label.med=Number of media items:
 gui.summary.label.sam=Number of samples:
 gui.summary.value.ind={0,number,integer}
-gui.summary.value.enc={0,number,integer} ({1} unassigned to individuals)
+gui.summary.value.enc={0,number,integer} ({1} unassigned to individuals, {2} assigned to existing individuals)
 gui.summary.value.mea={0,number,integer}
 gui.summary.value.med={0,number,integer}
 gui.summary.value.sam={0,number,integer}
