--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -24,7 +24,7 @@ dataDirectoryName = shepherd_data_dir
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 #This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
-GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
+GlobalUniqueIdentifierPrefix=MARINEMEGAFAUNA:MANTA:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
 wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
@@ -49,10 +49,10 @@ removeEmailString=Do you want to REMOVE your email address from this database? C
 #HTML metadata for each page
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
-htmlAuthor=ECOCEAN USA - info@ecoceanusa.org
-htmlDescription=The ECOCEAN Manta Matcher is a visual database of giant manta (Manta birostris) encounters and of individually catalogued giant mantas. The library is maintained and used by marine biologists to collect and analyse giant manta encounter data to learn more about these amazing creatures.
-htmlKeywords=giant manta,manta ray,Manta birostris,big fish,ECOCEAN USA, fish, coral, sharks, elasmobranch, mark, recapture, photo-identification, identification, conservation, citizen science
-htmlTitle=ECOCEAN MantaMatcher
+htmlAuthor=Wild Me - info@ecoceanusa.org
+htmlDescription=Manta Matcher is a visual database of giant manta (Manta birostris) encounters and of individually catalogued giant mantas. The library is maintained and used by marine biologists to collect and analyse giant manta encounter data to learn more about these amazing creatures.
+htmlKeywords=giant manta,manta ray,Manta birostris,big fish,Wild Me, Marine Megafauna Foundation,fish, coral, sharks, elasmobranch, mark, recapture, photo-identification, identification, conservation, citizen science
+htmlTitle=MantaMatcher
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
 
@@ -60,7 +60,7 @@ urlToMastheadGraphic=/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=/images/lib_bottom.gif
-footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
+footerGraphicAlt=Powered by Wildbook
 
 
 #Google Service keys for Search and Maps
