--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
 	<artifactId>spring-core</artifactId>
 	<version>3.1.1.RELEASE</version>
 </dependency>
+
+<dependency>
+	<groupId>com.healthmarketscience.jackcess</groupId>
+	<artifactId>jackcess</artifactId>
+	<version>1.2.14.2</version>
+</dependency>
+            
             
     <dependency>
       <groupId>org.datanucleus</groupId>
