persisting several more fields

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -116,9 +116,12 @@ showTaxonomy = true
 showLifestage = true
 
 #defined life stages
-lifeStage0=juvenile
-lifeStage1=sub-adult
-lifeStage2=adult
+lifeStage0=A
+lifeStage1=A?
+lifeStage2=M
+lifeStage3=M?
+lifeStage4=C
+lifeStage5=C?
 
 #show measurements
 showMeasurements = true
@@ -177,8 +180,13 @@ encounterStateCSSClass1=approved_encounters
 encounterStateCSSClass2=unidentifiable_encounters
 
 #limit Encounter.locationID to these values
-#locationID0 = location0
-#locationID1 = location 1
+locationID0 = 1
+locationID1 = 2
+locationID2 = 3
+locationID3 = 4
+locationID4 = 5
+locationID5 = 6
+
 
 #whether to show country field as a location
 showCountry = true
