second part export species fix

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -75,16 +75,6 @@ citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
 institutionCode=myInstitution
 catalogCode=myCatalog
 
-#for single species libraries, fill out these fields
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
-genus=whichGenus
-species=whichSpecies
-
-
 
 #nicknames
 allowNicknames=true
@@ -104,12 +94,20 @@ showEXIF = true
 #show taxonomy
 showTaxonomy = false
 
+
+#taxonomy details
+kingdom=whichKingdom
+phylum=whichPhylum
+class=whichClass
+order=whichOrder
+family=whichFamily
+
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 #you can alow for more complex options and descriptors, such as:
 #example 1: genusSpecies0 = Megaptera novaengilae, Humpback whale -- this example with the comma delimiter helps users pick the correct scientific name from a list with more common names
 #example 2: genusSpecies1 = Unknown_whale_and_dolphin
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
+genusSpecies0=myGenus1 mySpecies1
+genusSpecies1=myGenus2 mySpecies2
 #genusSpecies2=genus specificEpithet
 
 #show lifeStage
