--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -118,6 +118,14 @@ lifeStage0=juvenile
 lifeStage1=sub-adult
 lifeStage2=adult
 
+#defined patterningCodes for distinct visual marking types for individuals identified with photo-identification
+showPatterningCode = true
+patterningCode0 = spotted
+patterningCode1 = striped
+patterningCode2 = spotted and striped
+patterningCode3 = blotchy
+
+
 #show measurements
 showMeasurements = true
 
