--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -19,7 +19,7 @@
 
 #name (NOT PATH!) of the directory in which to store project image data
 #if you set this value to myCustomDirName, then your web server must also be able to resolve /myCustomDirName on its root URL
-dataDirectoryName = shepherd_data_dir
+dataDirectoryName = caribwhale_data_dir
 
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
@@ -189,7 +189,7 @@ locationID5 = 6
 
 
 #whether to show country field as a location
-showCountry = true
+showCountry = false
 
 #associated country if observation
 country0 = American Samoa 
