example multi-=species config change

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -34,7 +34,7 @@ allowAdoptions = false
 
 #email addresses and parameters
 sendEmailNotifications=false
-autoEmailAddress=webmaster@someplace.org
+autoEmailAddress=holmbergius@gmail.com
 newSubmissionEmail=submissions@someplace.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
@@ -48,10 +48,10 @@ htmlShortcutIcon=images/favicon.ico
 htmlAuthor=CARIBwhale
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
+urlToMastheadGraphic=http://www.wildme.org/caribwhale/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
+urlToFooterGraphic=http://www.wildme.org/caribwhale/images/lib_bottom.gif
 footerGraphicAlt=Powered by Wildbook
 
 
@@ -108,8 +108,8 @@ showTaxonomy = true
 #you can alow for more complex options and descriptors, such as:
 #example 1: genusSpecies0 = Megaptera novaengilae, Humpback whale -- this example with the comma delimiter helps users pick the correct scientific name from a list with more common names
 #example 2: genusSpecies1 = Unknown_whale_and_dolphin
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
+genusSpecies0=Physeter macrocephalus
+genusSpecies1=Balaenoptera musculus
 #genusSpecies2=genus specificEpithet
 
 #show lifeStage
@@ -146,7 +146,7 @@ maximumDepthInMeters = true
 showSize = false
 
 #project-related variables
-application.version=${pom.version}
+application.version=4.0.3-EXPERIMENTAL
 
 #genetic parameters
 numLoci = 14
