--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -169,7 +169,7 @@ maximumDepthInMeters = true
 showSize = true
 
 #project-related
-application.version=shepherd-3.4.0-EXPERIMENTAL
+application.version=wildbook-4.0.3-EXPERIMENTAL
 
 
 #genetic parameters
