more upgrade configuration

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -56,10 +56,10 @@ htmlTitle=MantaMatcher
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
 
-urlToMastheadGraphic=/images/masthead.jpg
+urlToMastheadGraphic=http://www.mantamatcher.org/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/images/lib_bottom.gif
+urlToFooterGraphic=http://www.mantamatcher.org/images/lib_bottom.gif
 footerGraphicAlt=Powered by Wildbook
 
 
