email text update

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -143,10 +143,9 @@ lifeStage2=adult
 
 #defined patterningCodes for distinct visual marking types for individuals identified with photo-identification
 showPatterningCode = true
-patterningCode0 = spotted
-patterningCode1 = striped
-patterningCode2 = spotted and striped
-patterningCode3 = blotchy
+patterningCode0 = normal pigmentation
+patterningCode1 = black ("melanistic") pigmentation
+patterningCode2 = white ("leucistic") pigmentation
 
 
 #show measurements
