mantamatcher.org configuration changes

--- a/src/main/resources/bundles/submitActionClass.properties
+++ b/src/main/resources/bundles/submitActionClass.properties
@@ -17,3 +17,119 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
+mozambique=Mozambique
+mocambique=Mozambique
+mo\u00e7ambique=Mozambique
+tofo=Mozambique
+vilanculos=Mozambique
+vilankulos=Mozambique
+bazaruto=Mozambique
+zavora=Mozambique
+
+south\ africa=SouthAfrica
+
+elliot=AustraliaEast
+stradbroke=AustraliaEast
+moreton=AustraliaEast
+queensland=AustraliaEast
+new\ south\ wales=AustraliaEast
+
+western\ australia=AustraliaWest
+
+brazil=Brazil
+laje=Brazil
+santos=Brazil
+
+manabi=Ecuador
+manab\u00ed=Ecuador
+plata=Ecuador
+
+thailand=Thailand
+koh=Thailand
+ko bon=Thailand
+muang=Thailand
+daeng=Thailand
+tachai=Thailand
+
+myanmar=Myanmar
+
+ampat=Indonesia
+komodo=Indonesia
+bali=Indonesia
+lombok=Indonesia
+penida=Indonesia
+halmahera=Indonesia
+
+palau=Palau
+
+japan=Japan
+
+revillagigedo=MexicoRevillagigedos
+socorro=MexicoRevillagigedos
+jalisco=MexicoRevillagigedos
+baja=MexicoRevillagigedos
+
+hawaii=Hawaii
+maui=Hawaii
+kauai=Hawaii
+
+maldives=Maldives
+baa=Maldives
+hanifaru=Maldives
+guraidhoo=Maldives
+vaavu=Maldives
+lankan=Maldives
+
+peru=Peru
+per\u00fa=Peru
+
+egypt=Egypt
+sharm=Egypt
+sheik=Egypt
+sheikh=Egypt
+red\ sea=Egypt
+marsa=Egypt
+
+portugal=Portugal (Azores)
+azores=Portugal (Azores)
+madeira=Portugal (Azores)
+
+galapagos=Galapagos
+gal\u00e1pagos=Galapagos
+
+costa\ rica=Costa Rica
+
+yucatan=Mexico (Yucatan)
+yucat\u00e1n=Mexico (Yucatan)
+quintana=Mexico (Yucatan)
+holbox=Mexico (Yucatan)
+mujeres=Mexico (Yucatan)
+contoy=Mexico (Yucatan)
+cancun=Mexico (Yucatan)
+canc\u00fan=Mexico (Yucatan)
+
+yap=Yap
+
+india=India
+narcondam=India
+andaman=India
+
+saudi=Saudi Arabia
+arabia=Saudi Arabia
+
+U.S.A.=USA (east coast)
+USA=USA (east coast)
+
+fiji=Fiji
+gau=Fiji
+
+noumea=French Polynesia
+caledoni=French Polynesia
+
+philippines=Philippines
+leyte=Philippines
+
+papua=Papua New Guinea
+solomon=Papua New Guinea
+
+seychelles=Seychelles
