--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -144,8 +144,9 @@ lifeStage2=adult
 #defined patterningCodes for distinct visual marking types for individuals identified with photo-identification
 showPatterningCode = true
 patterningCode0 = normal pigmentation
-patterningCode1 = black ("melanistic") pigmentation
-patterningCode2 = white ("leucistic") pigmentation
+patterningCode1 = black pigmentation - melanistic
+patterningCode2 = white pigmentation - leucistic
+#test comment
 
 
 #show measurements
