--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -98,6 +98,7 @@
 		                /appadmin/stats.jsp = authc, roles[admin]
 		                /appadmin/users.jsp = authc, roles[admin]
 		                /MassSetInformOthers = authc, roles[admin]
+		                /BatchUpload = authc, roles[admin]
 		                /MassExposeGBIF = authc, roles[admin]
 		                /MassSetLocationCodeFromLocationString = authc, roles[admin]
 		                /MassSwapLocationCode = authc, roles[admin]
@@ -107,6 +108,7 @@
                 /BatchUpload/** = authc, roles[manager]
                 /appadmin/batch* = authc, roles[manager]
 
+				/appadmin/batch* = authc, roles[admin]
 				 /appadmin/scanTaskAdmin.jsp = authc, roles[researcher]
 		                /xcalendar/** = authc, roles[researcher]
 		                /encounters/allEncountersUnapproved.jsp = authc, roles[researcher]
