Update to LocationID filter list.

--- a/src/main/resources/bundles/submitActionClass.properties
+++ b/src/main/resources/bundles/submitActionClass.properties
@@ -20,6 +20,7 @@
 mozambique=Mozambique
 mocambique=Mozambique
 mo\u00e7ambique=Mozambique
+inhambane=Mozambique
 tofo=Mozambique
 vilanculos=Mozambique
 vilankulos=Mozambique
@@ -33,6 +34,8 @@ stradbroke=AustraliaEast
 moreton=AustraliaEast
 queensland=AustraliaEast
 new\ south\ wales=AustraliaEast
+qld=AustraliaEast
+nsw=AustraliaEast
 
 western\ australia=AustraliaWest
 
@@ -46,7 +49,7 @@ plata=Ecuador
 
 thailand=Thailand
 koh=Thailand
-ko bon=Thailand
+ko\ bon=Thailand
 muang=Thailand
 daeng=Thailand
 tachai=Thailand
@@ -86,7 +89,6 @@ per\u00fa=Peru
 egypt=Egypt
 sharm=Egypt
 sheik=Egypt
-sheikh=Egypt
 red\ sea=Egypt
 marsa=Egypt
 
@@ -98,6 +100,9 @@ galapagos=Galapagos
 gal\u00e1pagos=Galapagos
 
 costa\ rica=Costa Rica
+guanacaste=Costa Rica
+papagayo=Costa Rica
+murcielagos=Costa Rica
 
 yucatan=Mexico (Yucatan)
 yucat\u00e1n=Mexico (Yucatan)
