further CaribWHALE configs

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -24,7 +24,7 @@ dataDirectoryName = caribwhale_data_dir
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 #This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
-GlobalUniqueIdentifierPrefix=CaribWhale:MultipleSpecies:
+GlobalUniqueIdentifierPrefix=OceanSmart:CaribWHALE:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
 #wikiLocation=http://localhost:8080/wiki/doku.php?id=
@@ -33,9 +33,9 @@ GlobalUniqueIdentifierPrefix=CaribWhale:MultipleSpecies:
 allowAdoptions = false
 
 #email addresses and parameters
-sendEmailNotifications=false
-autoEmailAddress=holmbergius@gmail.com
-newSubmissionEmail=submissions@someplace.org
+sendEmailNotifications=true
+autoEmailAddress=holmbergius@gmail.com,jlevenson@mac.com
+newSubmissionEmail=submissions@oceansmart.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
@@ -48,10 +48,10 @@ htmlShortcutIcon=images/favicon.ico
 htmlAuthor=CARIBwhale
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=http://www.wildme.org/caribwhale/images/masthead.jpg
+urlToMastheadGraphic=http://www.oceansmart.org/caribwhale/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=http://www.wildme.org/caribwhale/images/lib_bottom.gif
+urlToFooterGraphic=http://www.oceansmart.org/caribwhale/images/lib_bottom.gif
 footerGraphicAlt=Powered by Wildbook
 
 
@@ -71,9 +71,9 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
+citation=Levenson, Jacob. OceanSmart CaribWHALE mark-recapture software library. http://www.oceansmart.org/caribwhale.
 institutionCode=CARIBwhale
-catalogCode=MultipleCatalogs
+catalogCode=MultiSpecies
 
 
 #nicknames
@@ -96,11 +96,11 @@ showTaxonomy = true
 
 
 #taxonomy details
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
+kingdom=Animalia
+phylum=Chordata
+class=Mammalia
+order=Cetacea
+family=Various
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 #you can alow for more complex options and descriptors, such as:
@@ -122,7 +122,7 @@ lifeStage4=C
 lifeStage5=C?
 
 #defined patterningCodes for distinct visual marking types for individuals identified with photo-identification
-showPatterningCode = true
+showPatterningCode = false
 patterningCode0 = spotted
 patterningCode1 = striped
 patterningCode2 = spotted and striped
@@ -133,12 +133,9 @@ patterningCode3 = blotchy
 showMeasurements = true
 
 #Measurements
-measurement0=weight
-measurementUnits0=kilograms
-measurement1=length
-measurementUnits1=meters
-measurement2=height
-measurementUnits2=meters
+measurement0=length
+measurementUnits0=meters
+
 
 #Sampling Protocol for Measurements
 samplingProtocol0=estimate
@@ -152,7 +149,7 @@ maximumDepthInMeters = true
 showSize = false
 
 #project-related variables
-application.version=4.0.3-EXPERIMENTAL
+application.version=4.1.0-EXPERIMENTAL
 
 #genetic parameters
 numLoci = 14
@@ -160,7 +157,7 @@ numPloids = 2
 alleleRelaxMaxValue = 5
 
 #tag parameters
-showMetalTags=true
+showMetalTags=false
 metalTagLocation0=left
 metalTagLocation1=right
 
