More confoig changes from Jake's feedback document

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -108,7 +108,10 @@ family=Various
 #example 2: genusSpecies1 = Unknown_whale_and_dolphin
 genusSpecies0=Physeter macrocephalus
 genusSpecies1=Balaenoptera musculus
-#genusSpecies2=genus specificEpithet
+genusSpecies2=Megaptera novaeangliae
+genusSpecies3=Balaenoptera acutorostrata
+genusSpecies4=Balaenoptera physalus
+genusSpecies5=Stenella attenuata
 
 #show lifeStage
 showLifestage = true
@@ -161,7 +164,7 @@ showMetalTags=false
 metalTagLocation0=left
 metalTagLocation1=right
 
-showAcousticTag=true
+showAcousticTag=false
 
 showSatelliteTag=true
 satelliteTagName0=Wild Life Computers
