--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
-  <artifactId>wildbook</artifactId>
-  <version>4.1.0-EXPERIMENTAL</version>
+  <artifactId>caribwhale</artifactId>
+  <version>1</version>
   <packaging>war</packaging>
 
   <properties>
